adding new project

--- a/main.css
+++ b/main.css
@@ -108,6 +108,10 @@ body {
     white-space: pre-line;
     transition: 0.5s;
 }
+.project a {
+    color: rgba(255, 255, 255, 0);
+    transition: 0.5s;
+}
 .project div .info {
     color: rgba(255, 255, 255, 0);
     width: fit-content;
@@ -134,6 +138,9 @@ body {
 }
 .project:hover p {
     color: rgba(255, 255, 255, 255);
+}
+.project:hover a {
+    color: rgba(163, 174, 255, 255);
 }
 .project:hover h2 {
     font-size: 1.5cm;
